<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="201dp"
        android:layout_height="57dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="104dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/donutButton"
        android:layout_width="143dp"
        android:layout_height="106dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="37dp"
        android:text="@string/order_donuts"
        app:layout_constraintEnd_toStartOf="@+id/coffeeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/ordersButton"
        android:layout_width="143dp"
        android:layout_height="106dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="74dp"
        android:text="@string/cart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donutButton" />

    <Button
        android:id="@+id/storeordersButton"
        android:layout_width="143dp"
        android:layout_height="106dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="72dp"
        android:text="@string/store_orders"
        app:layout_constraintStart_toEndOf="@+id/ordersButton"
        app:layout_constraintTop_toBottomOf="@+id/coffeeButton" />

    <Button
        android:id="@+id/coffeeButton"
        android:layout_width="143dp"
        android:layout_height="106dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="44dp"
        android:text="@string/order_coffee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/donutButton"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="121dp"
        android:layout_height="106dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/coffeeimage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coffee" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="121dp"
        android:layout_height="106dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/donutimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/donuts" />

</androidx.constraintlayout.widget.ConstraintLayout>