<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DonutsScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="212dp"
        android:layout_marginVertical="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/menuItemType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/item_name"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/menuItemDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="5dp"
            android:text="@string/order_details"
            android:scrollbars="vertical"
            android:textStyle="italic" />
    </LinearLayout>

    <Button
        android:id="@+id/removeOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_order" />


</LinearLayout>