<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/orderBackBtn"
        android:layout_width="147dp"
        android:layout_height="50dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="251dp"
        android:layout_marginBottom="4dp"
        android:text="@string/backTxt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submitOrderBtn"
        android:layout_width="147dp"
        android:layout_height="50dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="4dp"
        android:text="@string/place_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ListView
        android:id="@+id/allOrderListView"
        android:layout_width="407dp"
        android:layout_height="398dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderNumber"
        tools:listitem="@layout/listview_item" />

    <TextView
        android:id="@+id/orderNumber"
        android:layout_width="201dp"
        android:layout_height="57dp"
        android:layout_marginStart="106dp"
        android:layout_marginEnd="104dp"
        android:text="@string/order_number"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtotalTxt"
        android:layout_width="378dp"
        android:layout_height="34dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="22dp"
        android:text="@string/subtotal"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allOrderListView" />

    <TextView
        android:id="@+id/salestaxTxt"
        android:layout_width="386dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:text="@string/sales_tax"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allOrderListView" />

    <TextView
        android:id="@+id/totalTxt"
        android:layout_width="388dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="116dp"
        android:text="@string/total"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allOrderListView" />
</androidx.constraintlayout.widget.ConstraintLayout>