<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    tools:context=".DonutsScreen">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="201dp"
        android:layout_height="57dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="34dp"
        android:text="@string/donut_type"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="407dp"
        android:layout_height="60dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/order_donuts"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="201dp"
        android:layout_height="57dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="104dp"
        android:text="@string/donut_orders"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donutFlavorRecycle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/donutFlavorRecycle"
        android:layout_width="399dp"
        android:layout_height="146dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

    </androidx.recyclerview.widget.RecyclerView>

    <ListView
        android:id="@+id/allOrderListView"
        android:layout_width="407dp"
        android:layout_height="280dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:listitem="@layout/listview_item" />

    <Button
        android:id="@+id/donutBackBtn"
        android:layout_width="147dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="20dp"
        android:text="@string/backTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allOrderListView" />

</androidx.constraintlayout.widget.ConstraintLayout>